app/assets/stylesheets/revised/sections/bike_boxes.scss
$bike-box-bg: $gray-lighter;

.bike-boxes {
  margin-top: $vertical-height;

  @include list-unstyled;

  width: 100%;

  .bike-box-item {
    display: flex;
    flex-wrap: wrap;
    margin: $vertical-height 0 0 0;

    // Apply the background to just the width of the columns, not full row width
    padding-top: 0;
    padding-bottom: 0;

    &:nth-of-type(2n + 1) {
      background: $bike-box-bg;
    }
  }

  .bike-information {
    flex: 0 0 75%;
    padding: $vertical-height 0.9375rem;
  }

  .title-link {
    font-size: $body-font-size;
    width: 100%;
    margin: 0;

    a {
      display: block;
    }
  }

  .hover-expand-block {
    display: none;
    position: absolute;
    left: 33.3333%;
    bottom: 33.3333%;
    width: 300%;
    text-align: center;
    background: $gray-lightish;
    border: 1px solid $gray;
    padding: 0.5 * $vertical-height;
    z-index: $zindex-navbar-fixed - 1;

    p {
      margin: 0;
    }

    img {
      display: block;
      height: auto;
      width: 100%;
    }

    &:hover {
      text-decoration: none;
    }
  }

  .img-expanded .hover-expand-block {
    display: block;
  }
}

// Outside of bike-boxes because used on the user personal page
.bike-list-image {
  display: inherit;
  flex: 0 0 20%;
  height: 200px;
  position: relative;

  img {
    display: block;
    margin: auto;
    max-height: 200px;
    min-width: 70px;
  }

  .no-image {
    background: $bike-box-bg;
    height: 200px;
    margin: auto;
    min-width: 70px;
    padding: 2 * $vertical-height;
    vertical-align: middle;
  }
}

.thumb-overlay {
  background: #c2c2c2;
  height: 100%;
  opacity: .8;
  position: absolute;
  text-align: center;
  width: 100%;

  h4 {
    color: $white;
    margin: 0;
  }

  img {
    display: block;
    margin: $vertical-height auto;
    max-width: 60px;
    width: 50%;
  }
}

@media (min-width: $grid-breakpoint-md) {
  .bike-boxes {
    .hover-expand-block {
      width: 200%;
    }

    .bike-information {
      @include clearfix;

      .attr-list {
        float: left;
        width: 50%;

        .multi-attr-lists {
          &:first-of-type {
            padding-right: 0.9375rem;
          }

          &:last-of-type {
            padding-left: 0.9375rem;
          }
        }
      }
    }
  }
}

@media (min-width: $grid-breakpoint-xl) {
  .bike-boxes {
    .thumb-overlay {
      padding-top: $vertical-height;

      h4 {
        font-size: 21px;
      }
    }
  }
}

